--- a/src/home/App.less
+++ b/src/home/App.less
@@ -1,10 +1,11 @@
 body, html {
     width: 100%;
-    min-height: 100%;
-    margin: 0px;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 .demo {
-    margin: 40px;
     padding: 20px;
     text-align: center;
     border: 1px solid black;
