--- a/src/home/App.less
+++ b/src/home/App.less
@@ -1,26 +1,46 @@
-body, html {
+body, html, #app, .home-page {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
     overflow: hidden;
-}
-.demo {
-    padding: 20px;
-    text-align: center;
-    border: 1px solid black;
-    box-shadow: 8px 8px 5px #888888;
-    .message {
-        font-family: sans-serif;
-        font-size: 28px;
-        font-weight: bold;
-        text-shadow: 3px 3px 2px #888888;
-    }
-    .footer {
-        font-family: sans-serif;
-        width: 100%;
-        text-align: right;
-        font-size: 14px;
-        color: grey;
+    background-color: #000;
+    &.home-page {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        // flex-flow: column nowrap;
+        justify-content: center;
+        align-items: stretch;
+        align-content: stretch;
+        .page-body {
+            display: flex;
+            flex: 1;
+            flex-grow: 1;
+            flex-shrink: 0;
+            flex-basis: auto;
+            align-self: auto;
+            align-items: center;
+            span {
+                flex: 1;
+                font-size: 40px;
+                color: #fff;
+                font-weight: 700;
+                text-align: center;
+            }
+            &::-webkit-scrollbar {
+                margin-right: -48px;
+                width: 4px;
+                height: 4px;
+                background-color: rgba(168,168,170,.4);
+            }
+            &::-webkit-scrollbar-track {
+                width: 4px;
+            }
+            &::-webkit-scrollbar-thumb {
+                background: #567db3;
+                border-radius: 2px;
+            }
+        }
     }
 }
