--- a/src/home/App.less
+++ b/src/home/App.less
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
 body, html, #app, .home-page {
     width: 100%;
     height: 100%;
@@ -5,42 +9,42 @@ body, html, #app, .home-page {
     padding: 0;
     overflow: hidden;
     background-color: #000;
-    &.home-page {
+}
+.home-page {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    // flex-flow: column nowrap;
+    justify-content: center;
+    align-items: stretch;
+    align-content: stretch;
+    .page-body {
         display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        // flex-flow: column nowrap;
-        justify-content: center;
-        align-items: stretch;
-        align-content: stretch;
-        .page-body {
-            display: flex;
+        flex: 1;
+        flex-grow: 1;
+        flex-shrink: 0;
+        flex-basis: auto;
+        align-self: auto;
+        align-items: center;
+        span {
             flex: 1;
-            flex-grow: 1;
-            flex-shrink: 0;
-            flex-basis: auto;
-            align-self: auto;
-            align-items: center;
-            span {
-                flex: 1;
-                font-size: 40px;
-                color: #fff;
-                font-weight: 700;
-                text-align: center;
-            }
-            &::-webkit-scrollbar {
-                margin-right: -48px;
-                width: 4px;
-                height: 4px;
-                background-color: rgba(168,168,170,.4);
-            }
-            &::-webkit-scrollbar-track {
-                width: 4px;
-            }
-            &::-webkit-scrollbar-thumb {
-                background: #567db3;
-                border-radius: 2px;
-            }
+            font-size: 40px;
+            color: #fff;
+            font-weight: 700;
+            text-align: center;
+        }
+        &::-webkit-scrollbar {
+            margin-right: -48px;
+            width: 4px;
+            height: 4px;
+            background-color: rgba(168,168,170,.4);
+        }
+        &::-webkit-scrollbar-track {
+            width: 4px;
+        }
+        &::-webkit-scrollbar-thumb {
+            background: #567db3;
+            border-radius: 2px;
         }
     }
 }
