--- a/src/home/components/Header/header.less
+++ b/src/home/components/Header/header.less
@@ -2,9 +2,21 @@
     width: 100%;
     height: 40px;
     box-shadow: 0 0 10px 0 rgba(168,168,170,.2);
+    .logo {
+        width: 80px;
+        height: 40px;
+        float: left;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-image: url(../../../public/images/haw_white.png);
+        background-size: 30px;
+    }
     .highlight {
         width: 100%;
         height: 100%;
-        background-color: rgba(168,168,170,.4);
+        line-height: 40px;
+        padding: 0 20px 0 80px;
+        color: #C0C4CC;
+        transition: all .3s ease;
     }
 }
