--- a/src/home/App.less
+++ b/src/home/App.less
@@ -1,3 +1,4 @@
+@px2rem: 1 / 100;
 * {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
@@ -8,29 +9,29 @@ body, html, #app, .home-page {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #000;
+    background-color: #222;
+    background-image: url(./images/bg.jpg);
+    background-position: center center;
+    background-repeat: repeat-y;
+    background-size: cover;
 }
 .home-page {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    // flex-flow: column nowrap;
     justify-content: center;
     align-items: stretch;
     align-content: stretch;
     .page-body {
         display: flex;
-        flex: 1;
-        flex-grow: 1;
-        flex-shrink: 0;
-        flex-basis: auto;
+        flex: 1 0 auto;
         align-self: auto;
         align-items: center;
         span {
-            flex: 1;
-            font-size: 40px;
-            color: #fff;
-            font-weight: 700;
+            flex: 1 0 auto;
+            font-size: unit(24 * @px2rem, rem);
+            color: #eee;
+            font-weight: 500;
             text-align: center;
         }
         &::-webkit-scrollbar {
