--- a/src/home/components/Header/header.less
+++ b/src/home/components/Header/header.less
@@ -1,22 +1,25 @@
+@px2rem: 1 / 100;
 .header-nav {
     width: 100%;
-    height: 40px;
-    box-shadow: 0 0 10px 0 rgba(168,168,170,.2);
+    height: unit(80 * @px2rem, rem);
+    box-shadow: 0 0 unit(20 * @px2rem, rem) 0 rgba(168,168,170,.2);
+    background-color: rgba(255,255,255,.2);
     .logo {
-        width: 80px;
-        height: 40px;
+        width: unit(100 * @px2rem, rem);
+        height: unit(80 * @px2rem, rem);
         float: left;
         background-repeat: no-repeat;
         background-position: center center;
-        background-image: url(../../../public/images/haw_white.png);
-        background-size: 30px;
+        background-image: url(../../../public/images/icon.png);
+        background-size: unit(60 * @px2rem, rem);
     }
     .highlight {
         width: 100%;
         height: 100%;
-        line-height: 40px;
-        padding: 0 20px 0 80px;
+        line-height: unit(80 * @px2rem, rem);
+        padding: 0 unit(40 * @px2rem, rem) 0 unit(100 * @px2rem, rem);
         color: #C0C4CC;
+        font-size: unit(24 * @px2rem, rem);
         transition: all .3s ease;
     }
 }
