--- a/src/home/components/Header/header.less
+++ b/src/home/components/Header/header.less
@@ -20,6 +20,6 @@
         padding: 0 unit(40 * @px2rem, rem) 0 unit(100 * @px2rem, rem);
         color: #C0C4CC;
         font-size: unit(24 * @px2rem, rem);
-        transition: all .3s ease;
+        transition: opacity .3s ease;
     }
 }
