--- a/src/home/App.less
+++ b/src/home/App.less
@@ -16,6 +16,7 @@ body, html, #app, .home-page {
     background-size: cover;
 }
 .home-page {
+    position: relative;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
