--- a/src/home/App.less
+++ b/src/home/App.less
@@ -19,11 +19,8 @@ body, html, #app, .home-page {
     position: relative;
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: stretch;
-    align-content: stretch;
     .page-body {
+        position: relative;
         display: flex;
         flex: 1 0 auto;
         align-self: auto;
