--- a/src/home/components/Header/header.less
+++ b/src/home/components/Header/header.less
@@ -1,5 +1,6 @@
 @px2rem: 1 / 100;
 .header-nav {
+    position: relative;
     width: 100%;
     height: unit(80 * @px2rem, rem);
     box-shadow: 0 0 unit(20 * @px2rem, rem) 0 rgba(168,168,170,.2);
@@ -14,12 +15,21 @@
         background-size: unit(60 * @px2rem, rem);
     }
     .highlight {
-        width: 100%;
         height: 100%;
         line-height: unit(80 * @px2rem, rem);
         padding: 0 unit(40 * @px2rem, rem) 0 unit(100 * @px2rem, rem);
         color: #C0C4CC;
         font-size: unit(24 * @px2rem, rem);
         transition: opacity .3s ease;
+    }
+    .view-count {
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: unit(80 * @px2rem, rem);
+        line-height: unit(80 * @px2rem, rem);
+        padding: 0 unit(20 * @px2rem, rem);
+        font-size: unit(24 * @px2rem, rem);
+        color: #C0C4CC;
     }
 }
